# slip_detection

matlab_related/include/: _coder_fuzzy2inputs_api.h  _coder_fuzzy2inputs_info.h  _coder_fuzzy2inputs_mex.cpp  _coder_fuzzy2inputs_mex.h  abs.h  applyMamdaniAggregationMethod.h  applyMamdaniDefuzzificationMethod.h  applyMamdaniImplicationMethod.h  applyOperators.h  bwperim.h  fuzzifyInputs.h  fuzzy2inputs.h  fuzzy2inputs_initialize.h  fuzzy2inputs_terminate.h  fuzzy2inputs_types.h  imdilate.h  main.h  medfilt2.h  object_extract.h  object_extract_emxAPI.h  object_extract_emxutil.h  object_extract_initialize.h  object_extract_terminate.h  object_extract_types.h  padarray.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  trapmf1.h  trimf1.h
matlab_related/lib/: libstdc++.so.6
matlab_related/src/: applyOperators.cpp  fuzzy2inputs_initialize.cpp
slip_detection_davis/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
slip_detection_davis/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  slip_detection_davis-msg-extras.cmake.develspace.in  slip_detection_davis-msg-extras.cmake.installspace.in
slip_detection_davis/catkin_generated/installspace/: slip_detection_davis-msg-paths.cmake  slip_detection_davis.pc  slip_detection_davisConfig.cmake
slip_detection_davis/cfg/: just_mono.perspective  soft_exp.perspective  viewers.perspectivenew  viewers3.perspective
slip_detection_davis/cmake/: slip_detection_davis-genmsg-context.py  slip_detection_davis-genmsg.cmake
slip_detection_davis/include/: CompressiveForceGrasp.h  CornerDetectorARC.h  CornerDetectorFAST.h  CornerDetectorHARRIS.h  CornerDetectorHARRISoct12_back.h  EdgeDetector.h  FeatureDetector.h  FeatureTracker.h  IncipientSlipDetection.h  ObjectDetection.h  ShowManyImages.h  SlipDetection.h  SlipDetectionRawTest.h  SoftHandDetection.h  VisualServoing.h  davisdataprocessing (copy).h  davisdataprocessing.h  electric_gripper_baxter.h  harris_distinct_queue.h  harris_fixed_distinct_queue.h  harris_local_event_queues.h  softhandslipdetection.h  softhandslipdetection_backup.h  test_data_processing.h
slip_detection_davis/launch/: Slip_detect_control_Finray.launch  Slip_detect_control_raw.launch  Slip_detect_control_raw_mimic.launch  check_bag.launch  compressive_force_bag_start.launch  compressive_force_test.launch  rosbag_check.launch  run_bag_and_start.launch  run_bag_and_start_1.launch  testdavis_live.launch  visual_servo.launch
slip_detection_davis/msg/: CompressiveForceGrasp_stable.msg  CompressiveForceGrasp_stable_Final.msg  SlipDetectionDataComplete_analysis.msg  SlipDetectionDataComplete_analysis_final.msg  SlipDetectionDataComplete_analysis_final1.msg  SlipDetectionDataComplete_analysis_final2.msg  SlipDetectionDataComplete_analysis_final3.msg  SlipDetectionDataComplete_analysis_final4.msg  SlipDetectionDataComplete_stable.msg
slip_detection_davis/src/: CompressiveForceGrasp.cpp  CompressiveForceGrasp_node.cpp  CornerDetectorARC.cpp  CornerDetectorFAST.cpp  CornerDetectorHARRIS oct12_back.cpp  CornerDetectorHARRIS.cpp  EdgeDetector.cpp  FeatureDetector.cpp  FeatureTracker.cpp  IncipientSlipDetection.cpp  ObjectDetection.cpp  ObjectDetectionTest.cpp  SlipDetection.cpp  SlipDetectionRaw.h  SlipDetectionRawTest.cpp  SlipDetectionRawTestNode.cpp  SoftHandDetection.cpp  VisualServoing.cpp  data_processing_test_node (copy).cpp  data_processing_test_node.cpp  davisdataprocessing (copy).cpp  davisdataprocessing.cpp  event_process_test.cpp  experiment_test_node.cpp  harris_distinct_queue.cpp  harris_fixed_distinct_queue.cpp  obj_ext_test.cpp  object_extraction_control.cpp  slip_data_test.cpp  slip_detect_soft_test.cpp  softhandslipdetectio_backup.cpp  softhandslipdetection.cpp  softhandslipdetection_oct12_backup.cpp  softhandslipdetection_oct3_backup.cpp  test_data_processing.cpp  test_node.cpp  visual_servoing_node.cpp
slip_detection_davis/srv/: object_test.srv
