<?xml version="1.0"?>
<package>
  <name>slip_detection_davis</name>
  <version>0.0.0</version>
  <description>slip_detection_davis package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raj@todo.todo">raj</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jaco_kinect_calib_pkg</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
<build_depend>libpcl-all-dev</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>planning_scene_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
<build_depend>boost</build_depend>
<build_depend>eigen</build_depend>
<build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
<build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
<build_depend>jaco_driver_cpp</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>object_manipulation_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
<build_depend>boost</build_depend>
<build_depend>cmake_modules</build_depend>
 <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
<build_depend>libpcl-all-dev</build_depend>
<build_depend>boost</build_depend>
<build_depend>eigen</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gripper_server</build_depend>


  <run_depend>baxter_gripper_server</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>libcaer_catkin</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv-3.3.0</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <run_depend>baxter_gripper_server</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libpcl-all</run_depend>
 <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>dvs_msgs</run_depend>
   <run_depend>cmake_modules</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
<run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
<run_depend>eigen</run_depend>
<run_depend>tf</run_depend>
  <run_depend>boost</run_depend>
 <run_depend>cv_bridge</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>planning_scene_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
<run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
